--- a/apps/staking/src/index.html
+++ b/apps/staking/src/index.html
@@ -10,6 +10,7 @@
       content="initial-scale=1.0, maximum-scale=1.0, user-scalable=no, width=device-width"
     />
     <link rel="shortcut icon" href="assets/favicon.png" />
+    <link rel="manifest" href="assets/manifest.json" />
 
     <style>
       body,
